# slam-envire

./: .gitignore  CMakeLists.txt  FindGDAL.cmake  FindLibYAML.cmake  env_icp.cpp  envire.cpp  envire.hpp  envire.pc.in  icp.pc.in  manifest.xml  test_icp.cpp  todo
envire/: CMakeLists.txt  ClassMap.cpp  Core.cpp  Core.hpp  Environment.cpp  FrameNode.cpp  Grid.cpp  Grid.hpp  GridAccess.cpp  GridAccess.hpp  Grids.cpp  Grids.hpp  Image.cpp  Image.hpp  LaserScan.cpp  LaserScan.hpp  Layer.cpp  MLSProjection.cpp  MergePointcloud.cpp  MergePointcloud.hpp  Operator.cpp  PlyFile.cpp  PlyFile.hpp  Pointcloud.cpp  Pointcloud.hpp  Projection.cpp  Projection.hpp  ScanMeshing.cpp  ScanMeshing.hpp  Serialisation.cpp  Serialization.cpp  SerializationFactory.cpp  SimplifyPointcloud.cpp  SimplifyPointcloud.hpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  TriMesh.cpp  TriMesh.hpp
envire/core/: AsynchronousEventListener.cpp  AsynchronousEventListener.hpp  Environment.cpp  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventListener.cpp  EventSource.cpp  EventSource.hpp  FrameNode.cpp  Layer.cpp  Operator.cpp  Serialization.cpp  SerializationFactory.cpp  Transform.cpp
envire/maps/: Grid.cpp  Grid.hpp  GridBase.cpp  GridBase.hpp  Grids.cpp  Grids.hpp  LaserScan.cpp  LaserScan.hpp  MLSGrid.cpp  MLSMap.cpp  MLSMap.hpp  MultiLevelSurfaceGrid.cpp  MultiLevelSurfaceGrid.hpp  Pointcloud.cpp  Pointcloud.hpp  TriMesh.cpp  TriMesh.hpp
envire/operators/: MLSProjection.cpp  MLSProjection.hpp  MLSSlope.cpp  MLSSlope.hpp  MergeMLS.hpp  MergePointcloud.cpp  MergePointcloud.hpp  Projection.cpp  Projection.hpp  ScanMeshing.cpp  ScanMeshing.hpp  SimplifyPointcloud.hpp  Traversability.cpp  Traversability.hpp
envire/tools/: GraphViz.cpp  GridAccess.cpp  GridAccess.hpp  PlyFile.cpp
icp/: CMakeLists.txt  ICPConfigurationTypes.hpp  ICPConfigurationTypes.hpp~  icp.cpp  icp.hpp  icpConfigurationTypes.hpp  icpLocalization.cpp  icpLocalization.hpp  ransac.hpp  stability.cpp  stability.hpp  test_icp.cpp
src/: CMakeLists.txt  Core.hpp  envire.pc.in  icp
src/core/: Environment.cpp  Environment.hpp  EnvironmentItem.hpp  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventSource.cpp  EventSource.hpp  EventTypes.hpp  Features.hpp  FrameNode.cpp  FrameNode.hpp  Holder.hpp  Layer.cpp  Layer.hpp  Operator.cpp  Operator.hpp  Serialization.cpp  Serialization.hpp  SerializationFactory.cpp  SerializationFactory.hpp  Transform.cpp  Transform.hpp
src/maps/: ElevationGrid.cpp  ElevationGrid.hpp  Featurecloud.cpp  Featurecloud.hpp  Grid.hpp  GridBase.cpp  GridBase.hpp  Grids.cpp  Grids.hpp  LaserScan.cpp  LaserScan.hpp  MLSConfiguration.hpp  MLSGrid.cpp  MLSGrid.hpp  MLSMap.cpp  MLSMap.hpp  MLSPatch.hpp  MapSegment.cpp  MapSegment.hpp  MultiLevelSurfaceGrid.hpp  OccupancyGrid.cpp  OccupancyGrid.hpp  Pointcloud.cpp  Pointcloud.hpp  PolygonMap.cpp  PolygonMap.hpp  TraversabilityGrid.cpp  TraversabilityGrid.hpp  TriMesh.cpp  TriMesh.hpp
src/operators/: ClassGridProjection.hpp  CutPointcloud.cpp  CutPointcloud.hpp  DistanceGridToPointcloud.cpp  DistanceGridToPointcloud.hpp  Fold.cpp  Fold.hpp  GridFloatToMLS.cpp  GridFloatToMLS.hpp  GridIllumination.cpp  GridIllumination.hpp  MLSProjection.cpp  MLSProjection.hpp  MLSSimpleTraversability.cpp  MLSSimpleTraversability.hpp  MLSSlope.cpp  MLSSlope.hpp  MLSToGrid.cpp  MLSToGrid.hpp  MLSToPointCloud.cpp  MLSToPointCloud.hpp  MergeMLS.cpp  MergeMLS.hpp  MergePointcloud.cpp  MergePointcloud.hpp  ObjectGrowing.cpp  ObjectGrowing.hpp  Projection.cpp  Projection.hpp  ScanMeshing.cpp  ScanMeshing.hpp  SimpleTraversability.cpp  SimpleTraversability.hpp  SimplifyPointcloud.cpp  SimplifyPointcloud.hpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  TraversabilityGrassfire.cpp  TraversabilityGrassfire.hpp  TraversabilityGrowClasses.cpp  (+1 more)
src/tools/: BoxLookUpTable.cpp  BoxLookUpTable.hpp  BresenhamLine.cpp  BresenhamLine.hpp  ExpectationMaximization.hpp  GaussianMixture.hpp  GraphViz.cpp  GraphViz.hpp  GridAccess.cpp  ListGrid.hpp  Numeric.hpp  PlyFile.cpp  PlyFile.hpp  RadialLookUpTable.cpp  RadialLookUpTable.hpp  VoxelTraversal.hpp
test/: CMakeLists.txt  UnitTest.cpp  mlsperf.cpp  mlsperf.py  scene.pcs  scene.yml  test.scan  testMLS.cpp  testUncertainty.cpp  testWidget.cpp  test_icp.cpp  unit_test.cpp
test/unit/: core.cpp  icp.cpp  maps.cpp  mls.cpp  mlstopointcloud.cpp  occupancy.cpp  polyMap.cpp  serialization.cpp  uncertainty.cpp
test/viz/: CMakeLists.txt  GMMEM.cpp  testFeatures.cpp  testGrid.cpp  testMLS.cpp  (+2 more)
tools/: CMakeLists.txt  LogImport.cpp  asc2ply.cpp  dem_helper.cpp  env_add_grid.cpp  env_create.cpp  env_create_grid.cpp  env_delete_item.cpp  env_dem.cpp  env_graphviz.cpp  env_grid_add_noise.cpp  env_grid_illumination.cpp  env_grid_to_mls.cpp  env_icp.cpp  env_info.cpp  env_mls.cpp  env_mls_slopes.cpp  env_mls_to_grid.cpp  env_mls_to_pointcloud.cpp  env_mls_trajectory.cpp  env_mls_traversability.cpp  env_simplify.cpp  env_slam6d.cpp  env_surface.cpp  env_traversability.cpp  env_update.cpp
viz/: CMakeLists.txt  ColorConversion.hpp  ElevationGridVisualization.cpp  ElevationGridVisualization.hpp  EnvireEventListener.cpp  EnvireEventListener.hpp  EnvireVisualization.cpp  EnvireVisualization.hpp  EnvireWidget.hpp  EnvironmentItemVisualizer.cpp  EnvironmentItemVisualizer.hpp  FrameNodeManipulator.cpp  FrameNodeManipulator.hpp  FrameNodeSelection.cpp  FrameNodeSelection.hpp  FrameNodeVisualization.cpp  FrameNodeVisualization.hpp  GridVisualization.cpp  GridVisualization.hpp  GridVisualizationBase.cpp  GridVisualizationBase.hpp  ImageRGB24Visualization.cpp  ImageRGB24Visualization.hpp  ItemManipulator.cpp  ItemManipulator.hpp  LaserScanVisualization.cpp  LaserScanVisualization.hpp  MLSVisualization.cpp  MLSVisualization.hpp  MapSegmentVisualization.cpp  MapSegmentVisualization.hpp  OccupancyGridVisualization.cpp  OccupancyGridVisualization.hpp  PointcloudManipulator.cpp  PointcloudManipulator.hpp  PointcloudVisualization.cpp  PointcloudVisualization.hpp  QMLSVisualization.hpp  QPointcloudVisualization.hpp  TraversabilityGridVisualization.cpp  (+11 more)
(+22 files in other folders)
